server taking 4 minutes per refresh

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
 
 <br>
 
-
+<h2 class="class text-center"><%= link_to "Explore Arts", artworks_path, style: "text-decoration: none; color: black;" %></h2>
 
 <h2 class="class text-center"><%= link_to "Explore Arts", artworks_path, style: "text-decoration: none; color: black;" %></h2>
 <br>
