final commit before chosen

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 
-<h1 class="text-center">ART YOU SPACE</h1>
+<h1 class="text-center">ARTIFY YOUR SPACE</h1>
+<p>Displaying local artwork in local venues.  Your Art in your Places</p>
 <br>
 
 <div class="search-bar text-center">
