--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,8 +24,11 @@
       <%= link_to  mailbox_inbox_path, class: "navbar-wagon-item navbar-wagon-link" do %>
         <div class="badge-container">
           <i class="fa fa-envelope-o"></i>
+          <% @count = current_user.mailbox.inbox(:read => false).count(:id).to_i %>
+        <% if  @count > 0%>
+          <div class="badge badge-purple"><%= current_user.mailbox.inbox(:read => false).count(:id).to_s%></div>
 
-          <div class="badge badge-purple"><%=@unread_count%></div>
+          <% end %>
         </div>
 
       <% end %>
