accept and decline messages all set

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <script type="text/javascript">
       $(function() {
               //Initialize filterizr with default options
-              $('.filtr-container').filterizr('setOptions', { delay: 80, delayMode: 'progressive' });
+              $('.filtr-container').filterizr('setOptions', { delay: 400, delayMode: 'alternate' });
             });
           </script>
 
