--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 
+<div class="banner" style="background: linear-gradient(-30deg, rgba(0,101,168,0.4) 0%, rgba(0,36,61,0.4) 5%), url(https://static.pexels.com/photos/428111/pexels-photo-428111.jpeg);">
 <h1 class="text-center">ARTIFY YOUR SPACE</h1>
-<p>Displaying local artwork in local venues.  Your Art in your Places</p>
+<p class="text-center">Show artwork from local artists and experience your favorite art for<strong> FREE</strong>
 <br>
 
 <div class="search-bar text-center">
@@ -19,13 +20,12 @@
   </div>
 
 
-<br>
 
 <br>
+<br>
 
-<h2 class="class text-center"><%= link_to "Explore Arts", artworks_path, style: "text-decoration: none; color: black;" %></h2>
 
-<h2 class="class text-center"><%= link_to "Explore Arts", artworks_path, style: "text-decoration: none; color: black;" %></h2>
+<h2 class="class text-center"><%= link_to "Browse Our Artwork", artworks_path, style: "text-decoration: none; color: black;" %></h2>
 <br>
 
   <div class="cards-overview">
