--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,5 +44,9 @@
 
           <%= cloudinary_js_config %>
           <%= yield(:after_js) %>
+
+    <!-- Activate tab -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="javascript/tabs.js"></script>
     </body>
   </html>
