--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/css/bootstrap-datepicker.min.css" />
       <%= stylesheet_link_tag 'application', media: 'all' %>
       <%=   favicon_link_tag "paint.png" , type: "image/png" %>
+
+      <!-- Carousel slider  -->
+      <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+      <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
     </head>
   <body>
     <%= render 'shared/navbar' %>
@@ -34,7 +39,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/js/bootstrap-datepicker.min.js"></script>
     <%= javascript_include_tag 'application' %>
 
+
+<!--     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+ -->    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.js"></script>
+    <script src="javascript/tabs.js"></script>
+
+
     <script type="text/javascript">
       $(function() {
               //Initialize filterizr with default options
@@ -44,9 +57,5 @@
 
           <%= cloudinary_js_config %>
           <%= yield(:after_js) %>
-
-    <!-- Activate tab -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="javascript/tabs.js"></script>
     </body>
   </html>
