--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -39,14 +39,58 @@
 
 <h3>All My requests (Confirmed, Declined and Pending)</h3>
 <% current_user.venues.each do |venue| %>
-  <% venue.appointments.each do |appointment| %>
-  <ul>
-    <li>
-      <h4>
-        <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
-        <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
+<% venue.appointments.each do |appointment| %>
+<ul>
+  <li>
+    <h4>
+      <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
+      <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
 
 
+      by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
+      by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
+      <% else %>
+      by <%= Artwork.find(appointment.artwork_id).owner.username%>
+      <% end %>
+      (<%= appointment.artwork.category %>)
+      <br>
+      Status: <%= appointment.status %>
+      <br>
+    </h4>
+    For your: <%= appointment.venue_id%>
+    <br>
+    From <%= appointment.start_date %>
+    to <%= appointment.end_date %>
+    <br>
+    Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
+    <br>
+    <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
+    <% else %>
+    Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
+    <% end %>
+    <br>
+  </li>
+</ul>
+<% end %>
+<% end %>
+</div>
+
+<div class="tab-content hidden" id="venue">
+
+    <% current_user.venues.each do |venue| %>
+    <li><%= link_to venue.title, venue_path(venue.id), style: 'text-decoration: none; color:black;'  %></li>
+
+    ###########Confirmed Bookings####################
+
+    <% current_user.venues.each do |venue| %>
+    <% status = venue.appointments.where(status: "Confirmed") %>
+    <% status.each do |appointment| %>
+    <ul>
+      <li>
+        <h4>
+
+          <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
+          <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
           by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
           by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
           <% else %>
@@ -57,7 +101,7 @@
           Status: <%= appointment.status %>
           <br>
         </h4>
-        For your: <%= appointment.venue_id%>
+        For your: <%= appointment.venue.title %>
         <br>
         From <%= appointment.start_date %>
         to <%= appointment.end_date %>
@@ -73,143 +117,100 @@
     </ul>
     <% end %>
     <% end %>
-  </div>
-  <div class="tab-content hidden" id="venue">
-    <p>
-      <% current_user.venues.each do |venue| %>
-      <li><%= link_to venue.title, venue_path(venue.id), style: 'text-decoration: none; color:black;'  %></li>
 
-###########Confirmed Bookings####################
 
-<% current_user.venues.each do |venue| %>
- <% status = venue.appointments.where(status: "Confirmed") %>
-  <% status.each do |appointment| %>
-  <ul>
-    <li>
-      <h4>
+    ###############################
 
-              <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
-        <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
+    ###########Declined Bookings####################
+
+    <% current_user.venues.each do |venue| %>
+    <% status = venue.appointments.where(status: "Declined") %>
+    <% status.each do |appointment| %>
+    <ul>
+      <li>
+        <h4>
+
+          <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
+          <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
           by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
           by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
-        <% else %>
+          <% else %>
           by <%= Artwork.find(appointment.artwork_id).owner.username%>
-        <% end %>
-        (<%= appointment.artwork.category %>)
-        <br>
-        Status: <%= appointment.status %>
-        <br>
-      </h4>
+          <% end %>
+          (<%= appointment.artwork.category %>)
+          <br>
+          Status: <%= appointment.status %>
+          <br>
+        </h4>
         For your: <%= appointment.venue.title %>
-      <br>
+        <br>
         From <%= appointment.start_date %>
         to <%= appointment.end_date %>
-      <br>
+        <br>
         Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
-      <br>
+        <br>
         <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
         <% else %>
-          Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
+        Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
         <% end %>
-      <br>
-    </li>
-  </ul>
-  <% end %>
-<% end %>
-
-
-###############################
-
-###########Declined Bookings####################
-
-<% current_user.venues.each do |venue| %>
- <% status = venue.appointments.where(status: "Declined") %>
-  <% status.each do |appointment| %>
-  <ul>
-    <li>
-      <h4>
-
-              <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
-        <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
-          by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
-          by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
-        <% else %>
-          by <%= Artwork.find(appointment.artwork_id).owner.username%>
-        <% end %>
-        (<%= appointment.artwork.category %>)
         <br>
-        Status: <%= appointment.status %>
-        <br>
-      </h4>
-        For your: <%= appointment.venue.title %>
-      <br>
-        From <%= appointment.start_date %>
-        to <%= appointment.end_date %>
-      <br>
-        Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
-      <br>
-        <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
-        <% else %>
-          Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
-        <% end %>
-      <br>
-      <%= link_to "Delete", appointment_path(appointment), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
-    </li>
-  </ul>
-  <% end %>
-<% end %>
-
-
-###############################
-
-###########Pending Apporval Bookings####################
-
-<% current_user.venues.each do |venue| %>
- <% status = venue.appointments.where(status: "Pending") %>
-  <% status.each do |appointment| %>
-  <ul>
-    <li>
-      <h4>
-
-              <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
-        <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
-          by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
-          by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
-        <% else %>
-          by <%= Artwork.find(appointment.artwork_id).owner.username%>
-        <% end %>
-        (<%= appointment.artwork.category %>)
-        <br>
-        Status: <%= appointment.status %>
-        <br>
-      </h4>
-        For your: <%= appointment.venue.title %>
-      <br>
-        From <%= appointment.start_date %>
-        to <%= appointment.end_date %>
-      <br>
-        Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
-      <br>
-        <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
-        <% else %>
-          Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
-        <% end %>
-      <br>
-    </li>
-  </ul>
-  <% end %>
-<% end %>
-
-
-###############################
-
-<h3>My artworks</h3>
-<% current_user.artworks.each do |art| %>
-      <% end %>
+        <%= link_to "Delete", appointment_path(appointment), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
+      </li>
     </ul>
-    <%= link_to "Create Venues", new_venue_path, style: 'text-decoration: none; color:black;' %>
-  </p>
+    <% end %>
+    <% end %>
+
+
+    ###############################
+
+    ###########Pending Apporval Bookings####################
+
+    <% current_user.venues.each do |venue| %>
+    <% status = venue.appointments.where(status: "Pending") %>
+    <% status.each do |appointment| %>
+    <ul>
+      <li>
+        <h4>
+
+          <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
+          <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
+          by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
+          by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
+          <% else %>
+          by <%= Artwork.find(appointment.artwork_id).owner.username%>
+          <% end %>
+          (<%= appointment.artwork.category %>)
+          <br>
+          Status: <%= appointment.status %>
+          <br>
+        </h4>
+        For your: <%= appointment.venue.title %>
+        <br>
+        From <%= appointment.start_date %>
+        to <%= appointment.end_date %>
+        <br>
+        Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
+        <br>
+        <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
+        <% else %>
+        Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
+        <% end %>
+        <br>
+      </li>
+    </ul>
+    <% end %>
+    <% end %>
+
+<% end %>
+    ###############################
+<div>
+    <h3>My artworks</h3>
+    <% current_user.artworks.each do |art| %>
+    <% end %>
+
+  <%= link_to "Create Venues", new_venue_path, style: 'text-decoration: none; color:black;' %>
 </div>
+
 <div class="tab-content hidden" id="artwork">
   <% current_user.artworks.each do |art| %>
   <ul>
@@ -220,30 +221,31 @@
   <% end %>
   <%= link_to "Create an Artwork", new_artwork_path, style: 'text-decoration: none; color:black;' %>
 </div>
-<div class="tab-content hidden" id="requestout">
-<%  current_user.artworks.each do |artwork|  %>
-<% artwork.appointments.each do |appointment| %>
-<ul>
-  <li>
-    <% if appointment.venue.employees.first.username.nil? %>
-    <%= appointment.venue.employees.first.first_name %>
-    <%= appointment.venue.employees.first.last_name %>
-    <% else %>
-    <%= appointment.venue.employees.first.username %>
-    <% end %>
-    requested "<%= appointment.artwork.title %>"
-    for <%= link_to appointment.venue.title,  venue_path(appointment.venue.id), style: 'text-decoration: none; color:black;'  %> <br>
-    From <%= appointment.start_date%> to <%= appointment.end_date %>
-    <br>
-    <br>
-    <%= link_to 'Confirm',  appointment_confirm_path(appointment), class: "btn btn-success" %>
-    <%= link_to 'Decline',  appointment_decline_path(appointment), class: "btn btn-danger" %>
-    <br>
-    <br>
-  </li>
-</ul>
 
-<% end %>
-<% end %>
+<div class="tab-content hidden" id="requestout">
+  <%  current_user.artworks.each do |artwork|  %>
+  <% artwork.appointments.each do |appointment| %>
+  <ul>
+    <li>
+      <% if appointment.venue.employees.first.username.nil? %>
+      <%= appointment.venue.employees.first.first_name %>
+      <%= appointment.venue.employees.first.last_name %>
+      <% else %>
+      <%= appointment.venue.employees.first.username %>
+      <% end %>
+      requested "<%= appointment.artwork.title %>"
+      for <%= link_to appointment.venue.title,  venue_path(appointment.venue.id), style: 'text-decoration: none; color:black;'  %> <br>
+      From <%= appointment.start_date%> to <%= appointment.end_date %>
+      <br>
+      <br>
+      <%= link_to 'Confirm',  appointment_confirm_path(appointment), class: "btn btn-success" %>
+      <%= link_to 'Decline',  appointment_decline_path(appointment), class: "btn btn-danger" %>
+      <br>
+      <br>
+    </li>
+  </ul>
+
+  <% end %>
+  <% end %>
 </div>
-</div>
+
