--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,14 @@
 <div class="navbar-wagon">
-  <!-- Logo -->
-  <strong><%= link_to "GALLER-I", root_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #BE63C1;" %></strong>
-  <div class="navbar-right">
-    <div class="navbar-wagon-right hidden-xs hidden-sm">
+ <!-- <div class="badge-container"> -->
+ <%= link_to "Become an Artist", new_artwork_path, style: "text-decoration: none; font-size:14px;; margin: 10px; color: #9F9F9F;" %>
 
-      <!-- <div class="badge-container"> -->
-      <%= link_to "Become an Artist", new_artwork_path, style: "text-decoration: none; font-size:14px;; margin: 10px; color: #9F9F9F;" %>
-      <!-- </div> -->
-      <%= link_to "My appointments", appointments_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %>
+ <!-- Logo -->
+ <p id="title"><%= link_to "GALLER-I", root_path, style: "text-decoration: none"; %></p>
+
+ <div class="navbar-wagon-right hidden-xs hidden-sm">
+
+  <!-- </div> -->
+  <%= link_to "My appointments", appointments_path, style: "text-decoration: none; font-size:14px; margin: 10px; color: #9F9F9F;" %>
 
   <!--   <a href="" class="navbar-wagon-item navbar-wagon-link">
       <div class="badge-container">
@@ -20,18 +21,18 @@
     <!-- Profile picture and dropdown -->
     <% if user_signed_in? %>
 
-      <!-- Notification -->
-      <%= link_to  mailbox_inbox_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-        <div class="badge-container">
-          <i class="fa fa-envelope-o"></i>
-          <% @count = current_user.mailbox.inbox(:read => false).count(:id).to_i %>
-        <% if  @count > 0%>
-          <div class="badge badge-purple"><%= current_user.mailbox.inbox(:read => false).count(:id).to_s%></div>
-
-          <% end %>
-        </div>
+    <!-- Notification -->
+    <%= link_to  mailbox_inbox_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+    <div class="badge-container">
+      <i class="fa fa-envelope-o"></i>
+      <% @count = current_user.mailbox.inbox(:read => false).count(:id).to_i %>
+      <% if  @count > 0%>
+      <div class="badge badge-purple"><%= current_user.mailbox.inbox(:read => false).count(:id).to_s%></div>
 
       <% end %>
+    </div>
+
+    <% end %>
 
     <div class="navbar-wagon-item">
       <div class="dropdown">
@@ -71,7 +72,6 @@
       </ul>
     </div>
   </div>
-</div>
 
 </div>
 
