--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,8 @@
 
           <%= cloudinary_js_config %>
           <%= yield(:after_js) %>
+          <%= render 'layouts/footer' %>
+
 
     <!-- Activate tab -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
