--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,1 +1,26 @@
-// Your footer style
+#footer {
+  background: #848484;
+  padding: 30px 0;
+  color: #CCCCCC;
+}
+#footer p {
+  margin-top: 17px;
+}
+#footer ul {
+  margin-top: 10px;
+}
+#footer a {
+  color: #CCCCCC;
+  transition: color 0.5s ease;
+}
+#footer a:hover{
+  color: #5A5E6B;
+}
+
+.footer-column {
+  text-align: center;
+}
+
+#footer li {
+  list-style-type: none;
+}
