--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -6,7 +6,7 @@
     <div class="col-xs-12 col-md-8 ">
       <div class="">
         <div class="row">
-          <div class="search-bar fixed-bar">
+          <div class="search-bar">
             <form class="form-inline " action="/search" method="GET">
               <label class="sr-only" for="inlineFormInput">City</label>
               <input name="city" type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="inlineFormInput" placeholder="Type a city" value='<%= params[:city] %>'>
@@ -25,7 +25,7 @@
           <% @result.each do |artwork| %>
             <div class="col-xs-12 col-md-6 ">
               <% background_picture = cl_image_path(artwork.photo.path) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
-              <a class="card-link" href="#" >
+              <%= link_to artwork_path(artwork), class: "card-link" do %>
                 <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= background_picture %>');">
                   <div class="card-category"><%= artwork.category %></div>
                   <div class="card-description">
@@ -34,7 +34,7 @@
                     <p></p>
                   </div>
                 </div>
-              </a>
+              <% end %>
             </div>
           <% end %>
         </div>
