--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,8 +31,8 @@
 
   <div class="row">
     <div class="col-md-4">
-      <div class="card">
-        <div class="card-title">Paintings</div>
+      <div class="homecard">
+        <div class="homecard-title">Paintings</div>
         <%= link_to(search_path(test: 2), style: 'text-decoration: none;') do %>
         <%= image_tag "painting.jpg" %>
         <% end %>
@@ -41,8 +41,8 @@
     </div>
 
     <div class="col-md-4">
-      <div class="card">
-      <div class="card-title">Drawings</div>
+      <div class="homecard">
+      <div class="homecard-title">Drawings</div>
         <%= link_to(search_path(test: 2), style: 'text-decoration: none;') do %>
         <%= image_tag "drawings.jpg" %>
         <% end %>
@@ -50,8 +50,8 @@
     </div>
 
     <div class="col-md-4">
-      <div class="card">
-      <div class="card-title">Photographies</div>
+      <div class="homecard">
+      <div class="homecard-title">Photographies</div>
         <%= link_to(search_path(test: 3), style: 'text-decoration: none;') do %>
         <%= image_tag "photo.jpg" %>
         <% end %>
@@ -59,8 +59,8 @@
     </div>
 
     <div class="col-md-4">
-      <div class="card">
-      <div class="card-title">Scultures</div>
+      <div class="homecard">
+      <div class="homecard-title">Scultures</div>
         <%= link_to(search_path(test: 4), style: 'text-decoration: none;') do %>
         <%= image_tag "sculture.jpg" %>
         <% end %>
@@ -68,8 +68,8 @@
     </div>
 
     <div class="col-md-4">
-      <div class="card">
-      <div class="card-title">Installations</div>
+      <div class="homecard">
+      <div class="homecard-title">Installations</div>
         <%= link_to(search_path(test: 5), style: 'text-decoration: none;') do %>
         <%= image_tag "installation.jpg" %>
         <% end %>
@@ -77,8 +77,8 @@
     </div>
 
     <div class="col-md-4">
-      <div class="card">
-      <div class="card-title">Miscellaneous</div>
+      <div class="homecard">
+      <div class="homecard-title">Miscellaneous</div>
         <%= link_to(search_path(test: 6), style: 'text-decoration: none;') do %>
         <%= image_tag "miscelleneous-6.jpg" %>
         <% end %>
