--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,9 +1,9 @@
 .card {
-  height: 300px;
+  height: 450px;
   width: 500rm;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
-  color: white;
+  color: black;
   position: relative;
   padding-bottom: 20px;
   margin-bottom: 20px;
@@ -63,5 +63,11 @@ right: 7px;
     margin-top: 30px;
     overflow: scroll;
     height: 800px;
-    background-color: #eee;
+    background-color: white;
+}
+
+.card-pic{
+  width: 100%;
+  border-radius: 4px;
+
 }
