--- a/app/assets/stylesheets/components/_homecard.scss
+++ b/app/assets/stylesheets/components/_homecard.scss
@@ -1,4 +1,4 @@
-.card {
+.homecard {
   height: 180px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
@@ -9,12 +9,12 @@
   width: 100%;
 }
 
-.card img {
+.homecard img {
   height: 100%;
   width: 100%;
 }
 
-.card-title {
+.homecard-title {
   position: absolute;
   font-weight: bold;
   padding: 11px;
