--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -23,17 +23,19 @@
         </div>
         <div class="row scrollingContainer">
           <% @result.each do |artwork| %>
-            <div class="col-xs-12 col-md-6 ">
+            <div class="col-xs-12 col-md-6">
               <% background_picture = cl_image_path(artwork.photo.path) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
               <%= link_to artwork_path(artwork), class: "card-link" do %>
-                <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= background_picture %>');">
+                <div class="card">
+                <img class="card-img-top card-pic" src='<%= background_picture %>' alt="Card image cap">
                   <div class="card-category"><%= artwork.category %></div>
                   <div class="card-description">
-                    <h1><%= artwork.title %> </h1>
-                    <p>By: <%= artwork.owner.username %></p>
+                    <h1><%= artwork.title %> <p>By: <%= artwork.owner.username %></p></h1>
+
                     <p></p>
                   </div>
                 </div>
+
               <% end %>
             </div>
           <% end %>
@@ -41,7 +43,7 @@
       </div>
     </div>
     <div class="col-md-4 fixed-map">
-    <div id="map" style="width: 100%; height: 800px; "></div>
+    <div id="map" style="width: 100%; height: 915px; "></div>
       <% content_for(:after_js) do %>
       <%= javascript_tag do %>
       $(document).ready(function() {
@@ -62,7 +64,6 @@
 </div>
 </div>
 </div>
-
 
 
 
