--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -32,6 +32,11 @@
 <h2 class="card-title "><%= artwork.title %></h2>
 <p class="card-text ">By <%= artwork.owner.username %></p>
                   <div class="card-category"><%= artwork.category %></div>
+                  <div class="card-like"><i class="fa fa-heart" aria-hidden="true"></i>
+</div>
+
+<i class="fa fa-twitter card-social"></i>
+
 
                   </div>
                 </div>
