--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,19 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+<div class="col-xs-offset-3 col-xs-6">
+<h2 class = "text-center">Forgot your password?</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :email, autofocus: true %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+  <div class="form-actions text-center">
+    <%= f.button :submit, "Reset password", class: "btn btn-primary"%>
   </div>
+</div>
+</div>
 <% end %>
 
 <%= render "devise/shared/links" %>
